--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,9 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+body {
+  background: linear-gradient(#3b82f6, rgba(178, 148, 252, 0.43));
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
